--- a/day9/Backend/public/assets/index-B8Un6VrG.css
+++ b/day9/Backend/public/assets/index-B8Un6VrG.css
@@ -1,1 +1,53 @@
-*{padding:0;margin:0;box-sizing:border-box}html,body,#root{height:100%;width:100%}html{background-color:#212121;font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif}.notes{display:flex;flex-wrap:wrap;gap:20px;padding-block:20px;padding-inline:20px}.note{color:#fff;background-color:#4a4a4a;padding:20px;border-radius:10px}.create-note-form{display:flex;flex-direction:column;max-width:400px;gap:20px;padding:20px}.create-note-form .title,.create-note-form .description,.create-note-form .submit{padding:10px;border:none;outline:none}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+}
+html {
+  background-color: #212121;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Open Sans,
+    Helvetica Neue,
+    sans-serif;
+}
+.notes {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding-block: 20px;
+  padding-inline: 20px;
+}
+.note {
+  color: #fff;
+  background-color: #4a4a4a;
+  padding: 20px;
+  border-radius: 10px;
+}
+.create-note-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  gap: 20px;
+  padding: 20px;
+}
+.create-note-form .title,
+.create-note-form .description,
+.create-note-form .submit {
+  padding: 10px;
+  border: none;
+  outline: none;
+}
